<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.appportfolio.MainActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="24dp"
            android:text="@string/myAppsTitle" />

        <Button
            android:id="@+id/popular_movies_button"
            style="@style/buttonStyle"
            android:layout_below="@id/title"
            android:onClick="popularMovies"
            android:text="@string/popularMovies"
            />

        <Button
            android:id="@+id/stock_hawk_button"
            style="@style/buttonStyle"
            android:layout_below="@id/popular_movies_button"
            android:onClick="stockHawk"
            android:text="@string/stockHawk"
            />

        <Button
            android:id="@+id/build_it_bigger_button"
            style="@style/buttonStyle"
            android:layout_below="@id/stock_hawk_button"
            android:onClick="buildBigger"
            android:text="@string/buildBigger"
            />

        <Button
            android:id="@+id/make_your_app_material_button"
            style="@style/buttonStyle"
            android:layout_below="@id/build_it_bigger_button"
            android:onClick="makeApp"
            android:text="Make Your App Material"
            />

        <Button
            android:id="@+id/go_ubiquitous_button"
            style="@style/buttonStyle"
            android:layout_below="@id/make_your_app_material_button"
            android:onClick="goUbiquitous"
            android:text="@string/goUbiq"
            />

        <Button
            android:id="@+id/capstone_my_own_app_button"
            style="@style/buttonStyle"
            android:layout_below="@id/go_ubiquitous_button"
            android:onClick="capstone"
            android:text="@string/capstone"
            />
    </RelativeLayout>
</ScrollView>